Fixed controls z-index and added demos directory

--- a/Webroot/css/site.css
+++ b/Webroot/css/site.css
@@ -82,6 +82,7 @@ div.wrapper {
 div.controls {
     position: absolute;
     top: 0px;
+    z-index: 100;
 }
 
 div.controls a {
